hive/honeys/anki-sync/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anki-sync-main
  namespace: anki-sync-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ankisync.savew.dev`)
      priority: 10
      services:
        - kind: Service
          name: anki-sync-main
          namespace: anki-sync-k8s
          passHostHeader: true
          port: 8080
          scheme: http
  tls:
    domains:
      - main: ankisync.savew.dev
    secretName: wildcard-savew.dev-tls
